# ImGui-Addons

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
FileBrowser/: ImGuiFileBrowser.cpp  ImGuiFileBrowser.h  imgui_demo.cpp
preview/: main.cpp
